# rustarium

./: Cargo.toml  README.md
chat/asyncstd-client/: Cargo.toml
chat/asyncstd-client/src/: main.rs
chat/asyncstd-futures-client/: Cargo.toml
chat/asyncstd-futures-client/src/: main.rs
chat/asyncstd-futures-server/: Cargo.toml
chat/asyncstd-server/: Cargo.toml
chat/asyncstd-server/src/: main.rs
chat/blocking-client/: Cargo.toml
chat/blocking-client/src/: main.rs
chat/blocking-server/: Cargo.toml
chat/blocking-server/src/: main.rs
chat/callbacks-client/: Cargo.toml
chat/callbacks-client/src/: main.rs
chat/callbacks-server/: Cargo.toml
chat/callbacks-server/src/: main.rs
chat/epoll-client/: Cargo.toml
chat/epoll-server/: Cargo.toml
chat/futures-client/: Cargo.toml
chat/futures-server/: Cargo.toml
chat/futures-server/src/: main.rs
chat/io-uring-client/: Cargo.toml
chat/io-uring-client/src/: main.rs
chat/io-uring-server/: Cargo.toml
chat/io-uring-server/src/: main.rs
chat/state-machine-client/: Cargo.toml
chat/state-machine-client/src/: main.rs
chat/state-machine-server/: Cargo.toml
chat/threads-server/: Cargo.toml
chat/threads-server/src/: main.rs
chat/tokio-async-client/: Cargo.toml
chat/tokio-async-client/src/: main.rs
chat/tokio-async-server/: Cargo.toml
chat/tokio-async-server/src/: main.rs
chat/tokio-futures-client/: Cargo.toml
chat/tokio-futures-server/: Cargo.toml
chat/tokio-futures-server/src/: main.rs
clap/: Cargo.toml  README.md
clap/src/: .env  cli.yaml  main.rs
exercises/chat/blocking-client/: Cargo.toml
exercises/chat/blocking-server/: Cargo.toml
exercises/chat/callbacks-client/: Cargo.toml
exercises/chat/callbacks-server/: Cargo.toml
exercises/chat/epoll-client/: Cargo.toml
exercises/chat/epoll-server/: Cargo.toml
exercises/chat/futures-client/: Cargo.toml
exercises/chat/futures-server/: Cargo.toml
exercises/chat/io-uring-client/: Cargo.toml
exercises/clap/: Cargo.toml
exercises/grep/: Cargo.toml
exercises/multithreaded_server/: Cargo.toml
exercises/serde/: README.md
grep/src/: main.rs
multithreaded_server/src/: lib.rs  main.rs
protocols/http-1-client/: Cargo.toml
protocols/http-1-server/: Cargo.toml
protocols/http-2-client/: Cargo.toml
protocols/http-2-server/: Cargo.toml
serde/: .gitignore
serde/file_bson/: Cargo.toml
serde/vec_bson/: Cargo.toml
solutions/clap/: Cargo.toml
solutions/grep/: Cargo.toml
solutions/multithreaded_server/: Cargo.toml
solutions/serde/: Cargo.toml
solutions/threadpools/: README.md
threadpools/fixed/: Cargo.toml
threadpools/work-stealing/: Cargo.toml
(+57 files in other folders)
