[workspace]
resolver = "2"
members = [
"exercises/guess_number",
"exercises/fibonacci_number",
"exercises/grep",
"exercises/multithreaded_server",
"exercises/clap",
"solutions/guess_number",
"solutions/fibonacci_number",
"solutions/grep",
"solutions/multithreaded_server",  
"solutions/clap",
"solutions/chat/epoll-client", "solutions/chat/epoll-server",
"solutions/chat/io-uring-server", "solutions/chat/io-uring-client",
"solutions/chat/futures-client", "solutions/chat/futures-server",
"solutions/chat/state-machine-server", "solutions/chat/state-machine-client",
"solutions/chat/callbacks-client", "solutions/chat/callbacks-server",
"solutions/chat/threads-server", "solutions/chat/threads-client",
"solutions/chat/blocking-client", "solutions/chat/blocking-server",
]
