[workspace]
resolver = "2"
members = [
"grep",
"multithreaded_server",  
"clap",

"chat/epoll-client", "chat/epoll-server",
"chat/io-uring-server", "chat/io-uring-client",
"chat/asyncstd-client", "chat/asyncstd-server",
"chat/state-machine-server", "chat/state-machine-client",
"chat/callbacks-client", "chat/callbacks-server",
"chat/threads-server", "chat/threads-client",
"chat/blocking-client", "chat/blocking-server",
"chat/tokio-async-client", "chat/tokio-async-server",
"chat/tokio-futures-client", "chat/tokio-futures-server",

"protocols/http-1-client", "protocols/http-1-server",
"protocols/http-2-client", "protocols/http-2-server",

"serde/file_bson", "serde/file_json",
"serde/vec_bson", "serde/vec_json", "serde/vec_ron",

"threadpools/fixed",
"threadpools/cached",
"threadpools/work-stealing",
"threadpools/priority",
"threadpools/event-driven",
"threadpools/cpu-io-bound", 
]
